fixing collapse scss issue

--- a/my-react-app/src/components/collapse/collapse.scss
+++ b/my-react-app/src/components/collapse/collapse.scss
@@ -2,6 +2,11 @@
 
 .collapse {
     margin-bottom: 3%;
+
+    &--small{
+    width: 48%;
+    }
+
     &__button {
         width: 100%;
         height: 50px;
